--- a/proj1/.gitignore
+++ b/proj1/.gitignore
@@ -2,9 +2,10 @@
 # You should customize this list as applicable to your project.
 # Learn more about .gitignore:
 #     https://www.atlassian.com/git/tutorials/saving-changes/gitignore
-
-.out
-.txt
+.gitignore
+pizzaCode.cpp
+*.out
+*.txt
 # Node artifact files
 node_modules/
 dist/
