--- a/proj1/Makefile
+++ b/proj1/Makefile
@@ -4,7 +4,7 @@ CXXFLAGS = -std=c++11
 all: clean npshell.out
 	
 npshell.out: npshell.cpp
-	$(CXX) $(CXXFLAGS) -o npshell.out npshell.cpp -DDEBUG -DPIPE -DNUMPIPE
+$(CXX) $(CXXFLAGS) -o npshell.out npshell.cpp -DDEBUG -DPIPE -DNUMPIPE -DCOMMAND
 
 run: npshell.out
 	./npshell.out
